[chromium] Partially filled pixels do not occlude pixels below them. https://bugs.webkit.org/show_bug.cgi?id=76658

Patch by Dana Jansens <danakj@chromium.org> on 2012-01-20
Reviewed by James Robinson.

Source/WebCore:

Test: compositing/culling/tile-occlusion-boundaries.html

* platform/graphics/chromium/cc/CCQuadCuller.cpp:
(WebCore::enclosedIntRect):
(WebCore::CCQuadCuller::cullOccludedQuads):

LayoutTests:

* compositing/culling/tile-occlusion-boundaries-expected.png: Added.
* compositing/culling/tile-occlusion-boundaries-expected.txt: Added.
* compositing/culling/tile-occlusion-boundaries.html: Added.
* compositing/resources/green.jpg: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@105561 bbb929c8-8fbe-4397-9dbb-9b2b20218538